--- a/docs/notebooks/basic_circuit_execution.ipynb
+++ b/docs/notebooks/basic_circuit_execution.ipynb
@@ -5,7 +5,7 @@
             "id": "48c6731f-5188-41c1-afc4-123c6ed796ae",
             "metadata": {},
             "source": [
-                "# Sample Notebook to test the Quantum Inspire 2 Qiskit Interface\n",
+                "# Basic circuit execution\n",
                 "This notebooks illustrates how you can run your qiskit code on the Quantum Inspire 2 platform.\n",
                 "### This notebook makes the following assumptions:\n",
                 "- quantuminspire2 sdk installed\n",
