[QI2-1140] fully make circuit function

--- a/docs/notebooks/super_dense_coding.ipynb
+++ b/docs/notebooks/super_dense_coding.ipynb
@@ -38,59 +38,37 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "circuit = QuantumCircuit(3, 10)\n",
-    "circuit.initialize(1,0,0)\n",
-    "circuit.initialize(1,0,1)\n",
-    "circuit.measure(0, 0)\n",
-    "circuit.measure(1, 1)\n",
-    "circuit.ry(1.57079632679, 0)\n",
-    "circuit.ry(-1.57079632679, 1)\n",
-    "circuit.cz(1,0)\n",
+    "def superdense_encoding_circuit(qubit_a: int =0, qubit_b: int =0) -> QuantumCircuit:\n",
+    "    circuit = QuantumCircuit(2, 2)\n",
+    "    circuit.initialize([1,0], qubit_a)\n",
+    "    circuit.initialize([1,0], qubit_b)\n",
+    "    circuit.measure(qubit_a, qubit_a)\n",
+    "    circuit.measure(qubit_b, qubit_b)\n",
+    "    circuit.ry(1.57079632679, qubit_a)\n",
+    "    circuit.ry(-1.57079632679, qubit_b)\n",
+    "    circuit.cz(qubit_b,qubit_a)\n",
     "\n",
-    "## variable gate\n",
+    "    ## apply variable gate\n",
+    "    encode_gate = 2**qubit_a + 2**qubit_b\n",
+    "    if encode_gate == 0: # identity I\n",
+    "        circuit.id(qubit_a)\n",
+    "    elif encode_gate == 1: # X\n",
+    "        circuit.x(qubit_a)\n",
+    "    elif encode_gate == 2: # Z\n",
+    "        circuit.z(qubit_a)\n",
+    "    elif encode_gate == 3: # Y\n",
+    "        circuit.y(qubit_a)\n",
     "\n",
-    "circuit.cz(1,0)\n",
-    "circuit.ry(-1.57079632679, 0)\n",
-    "circuit.ry(1.57079632679, 1)\n",
+    "    circuit.cz(qubit_b, qubit_a)\n",
+    "    circuit.ry(-1.57079632679, qubit_a)\n",
+    "    circuit.ry(1.57079632679, qubit_b)\n",
     "\n",
     "\n",
-    "circuit.measure(0, 0)\n",
-    "circuit.measure(1, 1)\n",
+    "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
+    "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
+    "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
     "\n",
-    "\n",
-    "for i in range(4):\n",
-    "            if i == 0:\n",
-    "                gate = 'I'\n",
-    "            elif i == 1:\n",
-    "                gate = 'X'\n",
-    "            elif i == 2:\n",
-    "                gate = 'Z'\n",
-    "            elif i == 3:\n",
-    "                gate = 'Y'\n",
-    "\n",
-    "            qasm_string += \"\"\"\n",
-    "                barrier q[0:4]\n",
-    "                prep_z q[{qubitB},{qubitA}]\n",
-    "                measure_z q[{qubitB},{qubitA}]\n",
-    "                barrier q[0:4]\n",
-    "\n",
-    "                {{ Y90 q[{qubitA}] | mY90 q[{qubitB}] }}\n",
-    "\n",
-    "                CZ q[{qubitB}], q[{qubitA}]\n",
-    "\n",
-    "                barrier q[0:4]\n",
-    "\n",
-    "                {gate} q[{qubitA}]\n",
-    "\n",
-    "                barrier q[0:4]\n",
-    "\n",
-    "                CZ q[{qubitB}], q[{qubitA}]\n",
-    "                {{ mY90 q[{qubitA}] | Y90 q[{qubitB}] }}\n",
-    "\n",
-    "                measure_z q[{qubitB},{qubitA}]\n",
-    "                measure_z q[{qubitB},{qubitA}]\n",
-    "                measure_z q[{qubitB},{qubitA}]\n",
-    "                \"\"\".format(qubitB = qubitB, qubitA = qubitA, gate = gate)\n"
+    "    return circuit\n"
    ],
    "metadata": {
     "collapsed": false
