--- a/docs/notebooks/Super Dense Coding.ipynb
+++ b/docs/notebooks/Super Dense Coding.ipynb
@@ -30,11 +30,10 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "from qiskit import QuantumCircuit\n",
-    "from qiskit_quantuminspire.qi_provider import QIProvider\n",
-    "from qiskit_quantuminspire.cqasm import dumps\n",
-    "from qxelarator import execute_string\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "from qiskit_quantuminspire.qi_provider import QIProvider"
    ]
   },
   {
