[QI2-1140] pull request corrections and add images

--- a/docs/notebooks/Super Dense Coding.ipynb
+++ b/docs/notebooks/Super Dense Coding.ipynb
@@ -38,6 +38,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We divide the superdense code into four main sections: initilization, encoding, decoding, measurement. Initially, Alice creates the entangled state and sends one qubit to Bob for the encoding step. After the encoding, Bob returns the qubit to Alice, who decodes the message and measures the two qubits.\n",
+    "\n",
+    "![Superdense Coding](super_dense_coding.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -47,7 +56,7 @@
    "source": [
     "### Generate the circuit\n",
     "\n",
-    "The two qubits are initially prepared in the ground state 00. Before sending the qubit to Bob, Alice needs to prepare an entangled state. So, Alice applies a H-gate followed by a CNOT-gate to obtain the desired entangled state (1/sqrt(2)(00 + 11). Now the qubit is ready to be sent to Bob, who encodes the two classical bits of information.\n",
+    "The two qubits are initially prepared in the ground state 00. Before sending the qubit to Bob, Alice needs to prepare an entangled state. So, Alice applies a H-gate followed by a CNOT-gate to obtain the desired entangled state (1/sqrt(2))(00 + 11). Now the qubit is ready to be sent to Bob, who encodes the two classical bits of information.\n",
     "\n",
     "Bob can choose between four gates to apply to the qubit. Each gate will encode a different message for Alice. The four different possibilities are listed in the table below.\n",
     "\n",
@@ -62,9 +71,9 @@
     "\n",
     "The different possible states after encoding will then be:\n",
     "\n",
-    "After the encoding step, Bobs sends the qubit back to Alice. To decode the message, Alice applies a CNOT-gate followed by a H-gate, see Figure 1. The decoding of the '11' message is: H CNOT (1/sqrt(2)(-10 + 01) = 11\n",
+    "![encoding states](encoding_states.png)\n",
     "\n",
-    "The states after the different respective gate operations are listed in Table 1."
+    "After the encoding step, Bobs sends the qubit back to Alice. To decode the message, Alice applies a CNOT-gate followed by a H-gate, as shown in the first figure. The decoding of the '11' message is: H CNOT (1/sqrt(2))(-10 + 01) = 11"
    ]
   },
   {
@@ -85,8 +94,8 @@
     "    circuit = QuantumCircuit(2, 2)\n",
     "    qubit_a = 0\n",
     "    qubit_b = 1\n",
-    "    #circuit.reset(qubit_a)\n",
-    "    #circuit.reset(qubit_b)\n",
+    "    circuit.reset(qubit_a)\n",
+    "    circuit.reset(qubit_b)\n",
     "    circuit.measure(qubit_a, qubit_a)\n",
     "    circuit.measure(qubit_b, qubit_b)\n",
     "    circuit.ry(1.57079632679, qubit_a)\n",
@@ -109,6 +118,7 @@
     "    circuit.ry(1.57079632679, qubit_b)\n",
     "\n",
     "\n",
+    "    # maximum-likelihood 3 readout (ML3 RO)\n",
     "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
     "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
     "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
@@ -125,7 +135,7 @@
     }
    },
    "source": [
-    "# Run the Circuit in Quantum Inspire Platform\n",
+    "### Run the Circuit in Quantum Inspire Platform\n",
     "We generate a circuit for each of the possibilities (00, 01, 10, 11) and then run the circuit in the Quantum Inspire. We connect and choose one of the available backends."
    ]
   },
@@ -183,7 +193,7 @@
     }
    },
    "source": [
-    "# Plot results\n",
+    "### Plot results\n",
     "We plot the results of each encoding using matplotlib"
    ]
   },
