[QI2-1223] Fix failing pipeline

--- a/docs/notebooks/Super Dense Coding.ipynb
+++ b/docs/notebooks/Super Dense Coding.ipynb
@@ -90,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "def superdense_encoding_circuit(bit_a: int =0, bit_b: int =0) -> QuantumCircuit:\n",
+    "def superdense_encoding_circuit(bit_a: int = 0, bit_b: int = 0) -> QuantumCircuit:\n",
     "    circuit = QuantumCircuit(2, 2)\n",
     "    qubit_a = 0\n",
     "    qubit_b = 1\n",
@@ -100,30 +100,29 @@
     "    circuit.measure(qubit_b, qubit_b)\n",
     "    circuit.ry(1.57079632679, qubit_a)\n",
     "    circuit.ry(-1.57079632679, qubit_b)\n",
-    "    circuit.cz(qubit_b,qubit_a)\n",
+    "    circuit.cz(qubit_b, qubit_a)\n",
     "\n",
     "    ## apply variable gate\n",
     "    encode_gate = bit_a + 2**bit_b\n",
-    "    if encode_gate == 0: # identity I\n",
+    "    if encode_gate == 0:  # identity I\n",
     "        circuit.id(qubit_a)\n",
-    "    elif encode_gate == 1: # X\n",
+    "    elif encode_gate == 1:  # X\n",
     "        circuit.x(qubit_a)\n",
-    "    elif encode_gate == 2: # Z\n",
+    "    elif encode_gate == 2:  # Z\n",
     "        circuit.z(qubit_a)\n",
-    "    elif encode_gate == 3: # Y\n",
+    "    elif encode_gate == 3:  # Y\n",
     "        circuit.y(qubit_a)\n",
     "\n",
     "    circuit.cz(qubit_b, qubit_a)\n",
     "    circuit.ry(-1.57079632679, qubit_a)\n",
     "    circuit.ry(1.57079632679, qubit_b)\n",
     "\n",
-    "\n",
     "    # maximum-likelihood 3 readout (ML3 RO)\n",
     "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
     "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
     "    circuit.measure(qubit_b, qubit_a)  # in qiskit this measures in z basis\n",
     "\n",
-    "    return circuit\n"
+    "    return circuit"
    ]
   },
   {
@@ -166,22 +165,22 @@
     "for bit_a in range(2):\n",
     "    for bit_b in range(2):\n",
     "        circuit = superdense_encoding_circuit(bit_a, bit_b)\n",
-    "        \n",
+    "\n",
     "        # if using qxelarator\n",
-    "        #cqasm_string = dumps(circuit)\n",
-    "        #results = execute_string(cqasm_string, iterations=100).results\n",
-    "        #result_map[f'{bit_a}{bit_b}'] = results\n",
+    "        # cqasm_string = dumps(circuit)\n",
+    "        # results = execute_string(cqasm_string, iterations=100).results\n",
+    "        # result_map[f'{bit_a}{bit_b}'] = results\n",
     "\n",
     "        # if using thq QI2 Platform\n",
     "        job = backend.run(circuit, shots=1024)\n",
-    "        results = job.result(wait_for_results=True)  \n",
-    "        counts = results.data()['counts']\n",
+    "        results = job.result(wait_for_results=True)\n",
+    "        counts = results.data()[\"counts\"]\n",
     "        result_counts = {}\n",
     "        for key in counts:\n",
-    "            bin_str = format(int(key, 16),'04b')    \n",
+    "            bin_str = format(int(key, 16), \"04b\")\n",
     "            result_counts[bin_str] = counts[key]\n",
-    "        \n",
-    "        result_map[f'{bit_a}{bit_b}'] = result_counts"
+    "\n",
+    "        result_map[f\"{bit_a}{bit_b}\"] = result_counts"
    ]
   },
   {
@@ -212,18 +211,17 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "fig, axs = plt.subplots(2, 2, figsize=(8, 6))\n",
     "for index, key in enumerate(result_map):\n",
     "    results = result_map[key]\n",
     "    entries = list(results.keys())\n",
     "    occurrences = list(results.values())\n",
-    "    i0 = int(index/2)\n",
-    "    i1 = index % 2    \n",
-    "    axs[i0][i1].bar(entries, occurrences, color='skyblue')\n",
-    "    axs[i0][i1].set_title(f'Supercoding {key}')\n",
-    "    axs[i0][i1].set_xlabel('Entries')\n",
-    "    axs[i0][i1].set_ylabel('Occurrences')\n",
+    "    i0 = int(index / 2)\n",
+    "    i1 = index % 2\n",
+    "    axs[i0][i1].bar(entries, occurrences, color=\"skyblue\")\n",
+    "    axs[i0][i1].set_title(f\"Supercoding {key}\")\n",
+    "    axs[i0][i1].set_xlabel(\"Entries\")\n",
+    "    axs[i0][i1].set_ylabel(\"Occurrences\")\n",
     "\n",
     "# Adjust layout to prevent overlap\n",
     "plt.tight_layout()\n",
