[QI2-1410] Rebrand repository

--- a/docs/notebooks/Super Dense Coding.ipynb
+++ b/docs/notebooks/Super Dense Coding.ipynb
@@ -171,7 +171,7 @@
     "        # results = execute_string(cqasm_string, iterations=100).results\n",
     "        # result_map[f'{bit_a}{bit_b}'] = results\n",
     "\n",
-    "        # if using thq QI2 Platform\n",
+    "        # if using thq Quantum Inspire Platform\n",
     "        job = backend.run(circuit, shots=1024)\n",
     "        results = job.result(wait_for_results=True)\n",
     "        counts = results.data()[\"counts\"]\n",
